--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.7",
-    "@tailwindcss/vite": "^4.1.7"
+    "@tailwindcss/vite": "^4.1.7",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
